--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.1",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-big-calendar": "^1.18.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.0",
     "tailwindcss": "^3.4.17",
