--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "postcss": "^8.5.3",
-    "react": "^19.1.0",
+    "react": "^18.0.0",
     "react-big-calendar": "^1.18.0",
     "react-day-picker": "^9.6.7",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.0.0",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.0",
@@ -26,21 +26,17 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
-    "@types/react": "^19.1.4",
+    "@types/react": "^18.0.0",
     "@types/react-big-calendar": "^1.16.1",
-    "@types/react-dom": "^19.1.4"
+    "@types/react-dom": "^18.0.0",
+    "@yunyeji/eslint-config-react": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "browserslist": {
     "production": [
